# Gravity

./: CMakeLists.txt  Makefile  README.md  gravity.code-workspace  main.docx
.dep/: Object.d  main.d
include/: Object.hpp
linux-build/: CMakeCache.txt  Gravity  Makefile  cmake_install.cmake
src/: Object.cpp  main.cpp
windows/: Makefile
windows-build/: Makefile
